--- a/blocks/page.css
+++ b/blocks/page.css
@@ -1,4 +1,7 @@
 .page {
+    font-family: 'Inter', Arial, sans-serif;
+    font-size: 18px;
+    line-height: 1.2;
     background-color: #000;
     color: #545454;
 }
