features: add posts grid and footer

--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -1,16 +1,28 @@
 .footer { 
-    margin: 67px auto 60px calc((100vw - 880px)/2);
+    padding-top: 67px;
+    padding-bottom: 60px;
+    padding-left: calc((100vw - 880px)/2);
 }
 
-@media screen and (max-width: 1024px) {
+.footer__text {
+    margin: 0; 
+}
+
+@media screen and (max-width: 900px) {
     .footer {
-        margin-left: calc((100vw - 582px)/2);
+        margin-left: calc((100vw - 581px)/2);
     }
 }
 
-@media screen and (max-width: 582px) {
+@media screen and (max-width: 590px) {
     .footer {
+        margin: 0;
         max-width: 282px;
-        margin: 50px auto 36px 19px;
+        padding-top: 50px;
+        padding-bottom: 36px;
+        padding-left: 19px;
+    }
+    .footer__text {
+        font-size: 14px;
     }
 }
