--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -2,10 +2,20 @@
     margin: 40px auto 50px calc((100vw - 880px)/2);
     display: flex;
     color: #fff;
+    align-items: center;
 }
 
-.profile__avatar {
-    padding-right: 30px;
+@media screen and (max-width: 900px) {
+    .profile {
+        margin: 42px auto 50px;
+        flex-direction: column;
+    }
+}
+
+@media screen and (max-width: 544px) {
+    .profile {
+        margin-bottom: 36px;
+    }
 }
 
 .profile__info {
@@ -13,6 +23,80 @@
     grid-template-areas: 
     "name edit"
     "descriptor descriptor";
+    padding-right: 165px;
+}
+
+@media screen and (max-width: 900px) {
+    .profile__info {
+        padding-right: 0;
+        text-align: center;
+    }
+}
+
+.profile__avatar {
+    padding-right: 30px;
+}
+
+@media screen and (max-width: 900px) {
+    .profile__avatar {
+        padding-right: 0;
+        padding-bottom: 30px;
+    }
+}
+
+.profile__info-edit-button {
+    grid-area: edit;
+    width: 24px;
+    height: 24px;   
+    background-color: #000;
+    border: none;
+    background-image: url('../images/edit-button.svg');
+    background-position: center;
+    background-size: cover;
+    padding: 0;
+    align-self: center;
+}
+
+@media screen and (max-width: 544px) {
+    .profile__info-edit-button {
+        width: 18px;
+        height: 18px;
+    }
+}
+
+.profile__info-edit-button:hover {
+    color: #fff;
+    opacity: 0.6;
+}
+
+.profile__add-button {
+    width: 150px;
+    height: 50px;
+    background-color: #000;
+    border: solid 2px #fff;
+    border-radius: 2px;
+    background-image: url('../images/add-button.svg');
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+@media screen and (max-width: 900px) {
+    .profile__add-button {
+        width: 200px;
+        margin-top: 36px;
+    }
+}
+
+@media screen and (max-width: 544px) {
+    .profile__add-button {
+        width: 282px;
+    }
+}
+
+.profile__add-button:hover {
+    cursor: pointer;
+    color: #fff;
+    opacity: 0.6;
 }
 
 .profile__info-name {
@@ -24,8 +108,22 @@
     padding-right: 18px;
 }
 
+@media screen and (max-width: 544px) {
+    .profile__info-name {
+        font-size: 22px;
+        line-height: 1.18;
+        padding-right: 10px;
+    }
+}
+
 .profile__info-descriptor {
     margin: 0;
     grid-area: descriptor;
+    padding-top: 16px;
+}
 
+@media screen and (max-width: 544px) {
+    .profile__info-descriptor {
+        padding-top: 14px;
+    }
 }
