--- a/blocks/border.css
+++ b/blocks/border.css
@@ -9,7 +9,7 @@
 
 @media screen and (max-width: 1024px) {
     .border {
-        max-width: 100wv;
+        max-width: 100vw;
         left: 0;
     }
 }
