--- a/pages/index.css
+++ b/pages/index.css
@@ -5,5 +5,8 @@
 @import url('../blocks/logo.css');
 @import url('../blocks/border.css');
 @import url('../blocks/profile.css');
-
+@import url('../blocks/profile-edit-form.css');
+@import url('../blocks/popup.css');
+@import url('../blocks/posts-grid.css');
+@import url('../blocks/post.css');
 @import url('../blocks/footer.css');
