--- a/pages/index.css
+++ b/pages/index.css
@@ -3,7 +3,7 @@
 
 @import url('../blocks/page.css');
 @import url('../blocks/logo.css');
-@import url('../blocks/border.css');
+@import url('../blocks/header.css');
 @import url('../blocks/profile.css');
 @import url('../blocks/profile-edit-form.css');
 @import url('../blocks/popup.css');
