--- a/blocks/popup.css
+++ b/blocks/popup.css
@@ -7,10 +7,17 @@
     width: 100vw;
     height: 100vh;
     align-items: center;
+    z-index: 20;
+    visibility: hidden;
+    opacity: 0;
+    transition: visibility 0.25s, opacity 1s linear;
 }
 
 .popup_opened {
     display: flex;
+    visibility: visible;
+    opacity: 1;
+    transition: opacity 1s, visibility 1s 0.25s linear;
 }
 
 .popup__close-button { 
@@ -47,7 +54,7 @@
     grid-template-columns: auto 1fr;
     grid-template-areas: 
     ". close"
-    "form .";
+    "content .";
     z-index: 10;
 }
 
@@ -56,8 +63,34 @@
         row-gap: 13px;
         grid-template-areas: 
         "close"
-        "form";
+        "content";
     }
 }
 
+@media screen and (max-width: 544px) {
+    .popup__container-image {
+        row-gap: 0;
+        grid-template-areas: 
+        ". close"
+        "content .";
+    }
+}
 
+.popup__content {
+    margin: 0;
+    grid-area: content;
+}
+
+.popup__image { 
+    margin: 0;
+    padding-bottom: 10px;
+    max-width: 75vw;
+    max-height: 75vh;
+}
+
+.popup__image-caption {
+    margin: 0;
+    color: #fff;
+    font-size: 12px;
+    font-weight: 400;
+}
