--- a/blocks/form.css
+++ b/blocks/form.css
@@ -30,7 +30,8 @@
 
 .form__input {
     width: 358px;
-    margin: 0 36px 30px 36px;
+    margin: 0 36px;
+    padding: 0;
     border-top: none;
     border-left: none;
     border-right: none;
@@ -42,8 +43,35 @@
 @media screen and (max-width: 544px) {
     .form__input {
         width: 238px;
-        margin: 0 22px 30px 22px;
+        margin: 0 22px;
         padding-bottom: 9px;
+    }
+}
+
+.form__input_type_invalid {
+    border-bottom: 1px solid #ff0000;
+}
+
+.form__input-error {
+    min-height: 30px;
+    font-size: 12px;
+    line-height: 1;
+}
+
+@media screen and (max-width: 544px) {
+    .form__input-error {
+        min-height: 22px;
+    }
+}
+
+.form__input-error_active {
+    margin: 5px 36px 0px;
+    color: #f00;
+}
+
+@media screen and (max-width: 544px) {
+    .form__input-error_active {
+        margin: 5px 22px 0px;
     }
 }
 
@@ -75,4 +103,16 @@
 .form__save-button:hover {
     cursor: pointer;
     background-color: rgba(0, 0, 0, 0.8);
+}
+
+.form__save-button_disabled {
+    background-color: transparent;
+    border: solid 1px rgba(0, 0, 0, 0.2);
+    color: rgba(0, 0, 0, 0.2);
+}
+
+.form__save-button_disabled:hover {
+    background-color: transparent;
+    border: solid 1px rgba(0, 0, 0, 0.2);
+    color: rgba(0, 0, 0, 0.2);
 }
