--- a/blocks/form.css
+++ b/blocks/form.css
@@ -115,4 +115,5 @@
     background-color: transparent;
     border: solid 1px rgba(0, 0, 0, 0.2);
     color: rgba(0, 0, 0, 0.2);
+    cursor: default;
 }
