--- a/src/blocks/form.css
+++ b/src/blocks/form.css
@@ -21,11 +21,19 @@
     font-size: 24px;
 }
 
+.form__title-delete {
+    padding-bottom: 20px;
+}
+
 @media screen and (max-width: 544px) {
     .form__title {
         padding: 25px 22px 76px 22px;
         font-size: 18px;
     }
+    
+    .form__title-delete {
+        padding-bottom: 10px;
+    }    
 }
 
 .form__input {
@@ -81,6 +89,7 @@
 
 .form__save-button {
     width: 358px;
+    padding: 0;
     height: 50px;
     margin: 18px 36px 36px 36px;
     border-top: none;
