--- a/src/blocks/post.css
+++ b/src/blocks/post.css
@@ -42,9 +42,9 @@
 .post__caption {
     display: flex;
     justify-content: space-between;
-    align-items: baseline;
+    align-items: center;
     background-color: #fff;
-    padding: 25px 15px 31px 21px;
+    padding: 25px 18px 31px 21px;
 }
 
 .post__caption-text {
@@ -58,7 +58,14 @@
     overflow: hidden;
 }
 
-.post__caption-like{ 
+.post__caption-interactions {
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.post__caption-like__button{ 
     margin: 0;
     height: 24px;
     width: 24px;
@@ -70,11 +77,18 @@
     background-color: transparent;
 }
 
-.post__caption-like:hover {
+.post__caption-like__button:hover {
     cursor: pointer;
     opacity: 0.5;
 }
 
-.post__caption-like_active {
+.post__caption-like__button_active {
     background-image: url('../images/like-active.svg');
+}
+
+.post__caption-likes {
+    margin: 0;
+    padding-top: 3px;
+    text-align: center;
+    font-size: 14px;
 }
